# CrewAI

./: Dockerfile  README.md  dorms.json  pyproject.toml  rooms.json
src/testam/: crew.py  main.py
src/testam/config/: agents.yaml  tasks.yaml
