[project]
name = "testam"
version = "0.1.0"
description = "testam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
testam = "testam.main:run"
run_crew = "testam.main:run"
train = "testam.main:train"
replay = "testam.main:replay"
test = "testam.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
